# zax

./: .gitignore  LICENSE  README.md  eslint.config.js  package.json  tsconfig.json
.github/workflows/: ci.yml
crates/: Cargo.toml  clippy.toml
crates/zax_workspace_service/: Cargo.toml  build.rs
crates/zax_workspace_service/migrations/: V1__create_runs.sql  V2__test_failures.sql  V3__findings.sql  V4__add_package_column.sql
crates/zax_workspace_service/src/: main.rs  rpc.rs  store.rs
crates/zax_workspace_service/src/affected/: compute.rs  discovery.rs  graph.rs  mod.rs  parser.rs  resolver.rs  state.rs  watcher.rs
crates/zax_workspace_service/src/normalize/: mod.rs  path.rs  stable_id.rs
crates/zax_workspace_service/src/parsers/: eslint.rs  mod.rs  vitest.rs
fixtures/eslint-basic/: eslint.config.js  package.json
fixtures/eslint-basic/src/: errors.js  example.test.ts
fixtures/vitest-basic/: eslint.config.js  package.json
fixtures/vitest-basic/src/: math.test.ts  utils.test.ts
proto/: buf.gen.yaml  buf.yaml
proto/zax/v1/: affected.proto  artifacts.proto  entities.proto  workspace.proto
tests/e2e/: check.test.ts  m2-regression.test.ts
