[package]
name = "zax_workspace_service"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs", "io-util"] }
tokio-stream = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
thiserror = "1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
